small layout fixes on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -48,7 +48,7 @@ body, html {
 
   // scale down font size responsively on smaller screens
   @media (max-width: 1000px) {
-    font-size: calc(14px + .4vw);
+    font-size: calc(15px + .4vw);
   }
 }
 
